# Manifold_constrained_FWI

./: .gitignore  findings.md  pyproject.toml
exp/Curvevel_B/batch_joint_opt/: config_ddim_joint_opt_batch.yaml  demo_ddim_joint_opt_batch.py
exp/Curvevel_B/batch_red_diffeq/: config_ddim_red_diffeq_batch.yaml  demo_ddim_red_diffeq_batch.py
exp/Curvevel_B/joint_opt/: config_ddim_joint_opt.yaml  demo_ddim_joint_opt.py
exp/Curvevel_B/red_diffeq/: config_ddim_red_diffeq.yaml  demo_ddim_red_diffeq.py
exp/DDIM/ddim_fwi_ssi/: config_ddim_fwi_ssi.yaml  demo_ddim_fwi_ssi.py
exp/DDIM/ddim_generate_test/: config_ddim_generate.yaml  demo_ddim_generate.py
exp/DDIM/ddim_ls/: config_ddim_joint_opt.yaml  (+1 more)
exp/aux_vel_edm_joint_opt/: config_aux_vel_edm_joint_opt.yaml  demo_aux_vel_edm_joint_opt.py
exp/edm_opt_noise/: config_edm_opt_noise.yaml  demo_edm_opt_noise.py
exp/edm_opt_wave/: config_edm_opt_wave.yaml  demo_edm_opt_wave.py
exp/traditional_fwi/: config_traditional_fwi.yaml  demo_traditional_fwi.py
scripts/: config_sample_ddim.yaml  sample_ddim_curvevel_b.py  test_forward_modeling.py
src/: __init__.py
src/cell/: Network.py  __init__.py  basic_block.py
src/core/: __init__.py  consistency_distillation.py  generate.py  loss.py
src/dnnlib/: util.py
src/seismic/: __init__.py  wave_equation_forward.py
src/torch_utils/: misc.py  persistence.py  training_stats.py
src/utils/: record.py  tools.py  visual.py
training/: openfwi_unet_wrapper.py  train_ddpm_curvevel_b.py  train_ddpm_flatfault_b.py
training/configs/: curvevel_b_ddpm.yaml  flatfault_b_ddpm.yaml
(+37 files in other folders)
